discussion/kv_engine/186648/186648_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54515: Add new error-code to magma-kvstore.cc

Minimal change required for magma to merge neo CDC changes to master.

Change-Id: Id1a815e476f82a7c906d9c54626ab7c6cbdbacae

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-02-13 15:03:05.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-13 15:56:17.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22617/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3051:18: error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
    case Status::RangeNotFound:
                 ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22617/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3051:18:
error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22617/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52020/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(3051): error C2039: "RangeNotFound": is not a member of "magma::Status" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52020/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43653/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3051:18:
error: no member named "RangeNotFound" in "magma::Status"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43653/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1394/ : FAILURE

Compile error at [2023-02-13T15:49:16.274Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3051:18:
error: ?RangeNotFound? is not a member of ?magma::Status?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1394/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12342/ : FAILURE

Compile error at [2023-02-13T15:49:17.653Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3051:18:
error: no member named "RangeNotFound" in "magma::Status"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12342/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25096/ : FAILURE

Compile error at [2023-02-13T15:56:01.373Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3051:18:
error: ?RangeNotFound? is not a member of ?magma::Status?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25096/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25978/ : FAILURE

Compile error at [2023-02-13T15:54:04.181Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3051:18:
error: no member named "RangeNotFound" in "magma::Status"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25978/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33090/ : FAILURE

Compile error at [2023-02-13T15:54:03.252Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3051:18:
error: no member named "RangeNotFound" in "magma::Status"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33090/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12426/ : FAILURE

Compile error at [2023-02-13T15:06:06.570Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3051:18:
error: ?RangeNotFound? is not a member of ?magma::Status?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12426/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24218/ : FAILURE

Compile error at [2023-02-13T15:07:12.453Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3051:18:
error: no member named "RangeNotFound" in "magma::Status"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24218/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22650/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24670/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2023-03-01 15:33:30.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
